crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__add_two_numbers.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/add_two_numbers.cm
input_file: test_data/arithmetic/add_two_numbers.cm
---
Fixture: arithmetic/add_two_numbers.cm
============================================================
Source code:
fn add_two_numbers() -> felt {
    let a = 10;
    let b = 32;
    return a + b;
}

============================================================
Generated CASM:
add_two_numbers:
add_two_numbers:
add_two_numbers_0:
   0: 9 10 0 _             // [fp + 0] = 10
   1: 9 32 1 _             // [fp + 1] = 32
   2: 0 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 11 _ _ _             // return
