crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__and.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/and.cm
input_file: test_data/arithmetic/and.cm
---
Fixture: arithmetic/and.cm
============================================================
Source code:
fn simple_and() -> bool {
    let x = true;
    let y = true;
    let z = x && y;
    return z;
}

============================================================
Generated CASM:
simple_and:
simple_and:
simple_and_0:
   0: 9 1 0 _              // [fp + 0] = true
   1: 9 1 1 _              // [fp + 1] = true
   2: 2 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 14 -3 3 _            // if [fp + -3] != 0, jump to and_non_zero_0
   4: 9 0 -3 _             // [fp + -3] = 0
   5: 12 7 _ _             // jump to and_end_1
and_non_zero_0:
   6: 9 1 -3 _             // [fp + -3] = 1
and_end_1:
   7: 11 _ _ _             // return
