crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__equality.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/equality.cm
input_file: test_data/arithmetic/equality.cm
---
Fixture: arithmetic/equality.cm
============================================================
Source code:
fn main() -> bool {
    let a = 1;
    let b = 0;
    let c = a == b;
    let _d = a == 0;
    return c;
}

============================================================
Generated CASM:
main:
   0: 9 1 0 _              // [fp + 0] = 1
   1: 9 0 1 _              // [fp + 1] = 0
   2: 1 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 14 -3 3 _            // if [fp + -3] != 0, jump to not_zero_0
   4: 9 1 -3 _             // [fp + -3] = 1
   5: 12 7 _ _             // jump to end_1
not_zero_0:
   6: 9 0 -3 _             // [fp + -3] = 0
end_1:
   7: 11 _ _ _             // return
