crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__equals.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/equals.cm
input_file: test_data/arithmetic/equals.cm
---
Fixture: arithmetic/equals.cm
============================================================
Source code:
fn simple_eq() -> felt {
    let x = 10;
    let y = 20;
    let z = x == y;
    return z;
}

============================================================
Result: SEMANTIC ERRORS
Semantic errors found:
DiagnosticCollection {
    diagnostics: [
        Diagnostic {
            severity: Error,
            code: TypeMismatch,
            message: "type mismatch in return statement: expected `felt`, got `bool`",
            file_path: "arithmetic/equals.cm",
            span: 88..89,
            related_spans: [
                (
                    88..89,
                    "Cannot use bool in arithmetic operations. Consider using logical operators (&&, ||) instead.",
                ),
                (
                    18..22,
                    "function `simple_eq` declared here to return `felt`",
                ),
            ],
        },
    ],
}
