crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__left_imm.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/left_imm.cm
input_file: test_data/arithmetic/left_imm.cm
---
Fixture: arithmetic/left_imm.cm
============================================================
Source code:
fn with_left_imm() -> felt {
    let x = 1+1;
    let _y = 2*x;
    let z = 20/x;
    return z;
}

============================================================
Generated CASM:
with_left_imm:
with_left_imm:
with_left_imm_0:
   0: 9 2 0 _              // [fp + 0] = 2
   1: 9 20 2 _             // [fp + 2] = 20
   2: 3 2 0 -3             // [fp + -3] = [fp + 2] op [fp + 0]
   3: 11 _ _ _             // return
