crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__not_equals.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/not_equals.cm
input_file: test_data/arithmetic/not_equals.cm
---
Fixture: arithmetic/not_equals.cm
============================================================
Source code:
fn simple_neq() -> bool {
    let x = true;
    let y = false;
    let z = x != y;
    return z;
}

============================================================
Generated CASM:
simple_neq:
simple_neq:
simple_neq_0:
   0: 9 1 0 _              // [fp + 0] = true
   1: 9 0 1 _              // [fp + 1] = false
   2: 1 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 14 -3 3 _            // if [fp + -3] != 0, jump to neq_non_zero_0
   4: 9 0 -3 _             // [fp + -3] = 0
   5: 12 7 _ _             // jump to neq_end_1
neq_non_zero_0:
   6: 9 1 -3 _             // [fp + -3] = 1
neq_end_1:
   7: 11 _ _ _             // return
