crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@arithmetic__or.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for arithmetic/or.cm
input_file: test_data/arithmetic/or.cm
---
Fixture: arithmetic/or.cm
============================================================
Source code:
fn simple_or() -> bool {
    let x = true;
    let y = false;
    let z = x || y;
    return z;
}

============================================================
Generated CASM:
simple_or:
simple_or:
simple_or_0:
   0: 9 1 0 _              // [fp + 0] = true
   1: 9 0 1 _              // [fp + 1] = false
   2: 9 0 -3 _             // Initialize OR result to 0
   3: 14 0 3 _             // if [fp + 0] != 0, jump to or_true_0
   4: 14 1 2 _             // if [fp + 1] != 0, jump to or_true_0
   5: 12 7 _ _             // jump to or_end_1
or_true_0:
   6: 9 1 -3 _             // [fp + -3] = 1
or_end_1:
   7: 11 _ _ _             // return
